# yolop

./: .dockerignore  Dockerfile  Dockerfile.ros  Dockerfile.ros.base  README-Docker.md  README.md  docker-compose.yml  requirements-ros.txt  setup-linux.sh
av_sim_core/: README.md  package.xml  pure_pursuit.py  setup.py  stop_controller.py  vision_detector.py
av_sim_core/config/: rviz.rviz
av_sim_core/data/: waypoints.csv
av_sim_core/launch/: spawn_and_perception.launch.py
