<?xml version="1.0"?>
<package format="3">
  <name>av_sim_core</name>
  <version>0.1.0</version>
  <description>Core ROS 2 + CARLA autonomous vehicle simulation nodes (spawning, perception, control).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>ultralytics</exec_depend>
</package>
